--- a/LGO.LeagueOfLegends.ClientApiTest/LGO.LeagueOfLegends.ClientApiTest.csproj
+++ b/LGO.LeagueOfLegends.ClientApiTest/LGO.LeagueOfLegends.ClientApiTest.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
@@ -14,6 +15,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\LGO.LeagueOfLegends.ClientApi\LGO.LeagueOfLegends.ClientApi.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Resource\FullClassicGameWithBots.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
