add some test for full client game deserialization

--- a/LGO.LeagueOfLegends.ClientApiTest/LGO.LeagueOfLegends.ClientApiTest.csproj
+++ b/LGO.LeagueOfLegends.ClientApiTest/LGO.LeagueOfLegends.ClientApiTest.csproj
@@ -21,6 +21,12 @@
       <None Update="Resource\FullClassicGameWithBots.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resource\FullClassicGame.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resource\FullClassicSpectatedGame.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
