add tests for LeagueOfLegends.ClientApi

--- a/LGO.LeagueOfLegends.ClientApiTest/LGO.LeagueOfLegends.ClientApiTest.csproj
+++ b/LGO.LeagueOfLegends.ClientApiTest/LGO.LeagueOfLegends.ClientApiTest.csproj
@@ -27,6 +27,9 @@
       <None Update="Resource\FullClassicSpectatedGame.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resource\FullAramGame.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
