--- a/LeagueResource/LGO.LeagueResource.Model/LGO.LeagueResource.Model.csproj
+++ b/LeagueResource/LGO.LeagueResource.Model/LGO.LeagueResource.Model.csproj
@@ -5,4 +5,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\LGO.Backend.Core\LGO.Backend.Core.csproj" />
+    </ItemGroup>
+
 </Project>
